--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="ausadhi">
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
