--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,10 @@
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
         Back
       </ion-nav-back-button>
+
+      <button class="button button-calm" ng-click="modal.show()">
+        <i class="icon ion-plus-circled"></i>
+      </button>
     </ion-nav-bar>
 
     <ion-nav-view></ion-nav-view>
